--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "maath": "^0.10.8",
     "next": "15.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@react-three/drei": "^9.121.2",
+    "@react-three/drei": "^9.121.3",
     "@react-three/fiber": "^8.17.12",
     "@types/node": "^20",
     "@types/react": "^19",
