--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "maath": "^0.10.8",
     "next": "15.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
